--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,4 +13,5 @@
  *= require_tree .
  *= require_self
  *= require plugins/flexnav
- */
+ *= require plugins/bootstrap.min
+ *= require plugins/bootstrap-theme.min
